# lite

./: .env.example  .gitignore  Makefile  README.md  docker-compose.sonar.yml  docker-compose.yml  pyproject.toml  sonar-project.properties
backend/: Dockerfile  README.md  coverage.xml  entrypoint.sh  manage.py  pyproject.toml
backend/apps/accounts/: managers.py  mappers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/apps/accounts/management/commands/: seed.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/companies/: mappers.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/companies/migrations/: 0001_initial.py
backend/apps/products/: mappers.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/infrastructure/events/: publisher.py
docs/: ARQUITECTURA.md  DOMINIO.md  arquitectura.drawio
domain/: README.md  coverage.xml  pyproject.toml
domain/src/domain/: __init__.py  errors.py
domain/src/domain/entities/: __init__.py  company.py  inventory.py  product.py  user.py
domain/src/domain/rules/: __init__.py  permissions.py
domain/src/domain/value_objects/: __init__.py  money.py  nit.py  role.py
domain/tests/: test_company.py  test_framework_independence.py  test_money.py  test_product.py  test_user_and_permissions.py
frontend/: .env.local.example  README.md  package-lock.json  package.json
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agent/: page.tsx
frontend/src/app/companies/: page.tsx
frontend/src/app/inventory/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/lib/: api.ts  auth.tsx
infra/postgres/: init.sql
services/: Dockerfile  README.md  coverage.xml  pyproject.toml
services/app/: auth.py  config.py  db.py  main.py
services/app/ai_agent/: agent.py  embeddings.py  indexer.py  models.py  retrieval.py  router.py  tools.py
services/app/blockchain/: models.py  registry.py  router.py
services/app/blockchain/contracts/: DocumentRegistry.json  DocumentRegistry.sol
services/app/documents/: email.py  pdf.py  router.py  service.py
services/tests/: test_auth_gating.py  test_blockchain.py  test_documents_pdf.py
(+16 files in other folders)
