[tool.poetry]
name = "services"
version = "0.1.0"
description = "FastAPI services: documents (PDF+email) and AI agent (RAG)"
authors = ["Lite Thinking Candidate <dev@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
pydantic-settings = "^2.4"
pyjwt = "^2.9"
sqlalchemy = "^2.0"
psycopg = { extras = ["binary"], version = "^3.1" }
pgvector = "^0.3"
redis = "^5.0"
reportlab = "^4.2"
resend = "^2.0"
langchain = "^0.3"
langgraph = "^0.2"
langchain-ollama = "^0.2"
langchain-openai = "^0.2"
langchain-anthropic = "^0.2"
openai = "^1.40"
web3 = "^7.0"
python-multipart = "^0.0.9"
domain = { path = "../domain", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27"
pytest-cov = "^7.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
